Upload revised book 1010490138

--- a/Share/1010490138.html
+++ b/Share/1010490138.html
@@ -12,13 +12,13 @@ $title = '青春的徬徨';
 $book = 'P1010490138';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/5/3');
-ShowEpubDownload('2023/5/3');
-ShowVEpubDownload('2023/5/3');
+ShowUpdbDownload('2023/6/1 2023/5/3');
+ShowEpubDownload('2023/6/1 2023/5/3');
+ShowVEpubDownload('2023/6/1 2023/5/3');
 BookSectionEnd();
 ?>
 <img src="covers/1010490138.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝佳佳整理製作，感謝Sai Lee提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝佳佳整理製作，感謝Sai Lee提供掃瞄檔。感謝Gilbert勘誤。<br>
 <br>
 聲明（disclaimer）：此處封面圖像並非來自本電子書掃瞄檔，敬請留意。<br>
 <br>
@@ -49,6 +49,31 @@ BookSectionEnd();
 不詳<br>
 <br>
 <font size=2>
-<strong>勘誤表</strong>：<br>
+<strong>勘誤表：</strong><br>
+(Gilbert 2023/6/1)<br>
+從父親那事獲悉/從父親那裏獲悉<br>
+耶馬渓/耶馬溪（共二處）<br>
+未會經歷/未曾經歷<br>
+以後·他們的心/以後他們的心<br>
+诉苦/訴苦<br>
+對方她女人一定會/對方那女人一定會<br>
+會經/曾經<br>
+危臉/危險<br>
+以五千元把我趕走？/以五千元把我趕走？﹂<br>
+榆館/楡館（共十一處）<br>
+痙孿/痙攣<br>
+猥亵/猥褻<br>
+自動彈銀色的金屬殼/自動彈回銀色的金屬殼<br>
+﹁XX站是我下車的前一站。/XX站是我下車的前一站。<br>
+间答/回答<br>
+撥著出現了/接著出現了<br>
+我經做過相同的事/我曾經做過相同的事<br>
+我擔心母被他佔據/我擔心寡母被他佔據<br>
+带着/帶着<br>
+等侯/等候<br>
+彷佛/彷彿（共二處）<br>
+札晃/札幌（原書有誤）<br>
+遼濶/遼闊（共二處、原書有誤）<br>
+盡管/儘管（原書有誤，依劍輝前輩之錯別字表勘誤）<br>
 </font>
 </td></tr></table>
