Upload revised book 1010490173

--- a/Share/1010490173.html
+++ b/Share/1010490173.html
@@ -12,13 +12,13 @@ $title = '全面通緝';
 $book = 'P1010490173';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/6/19');
-ShowEpubDownload('2023/6/19');
-ShowVEpubDownload('2023/6/19');
+ShowUpdbDownload('2023/6/20 2023/6/19');
+ShowEpubDownload('2023/6/20 2023/6/19');
+ShowVEpubDownload('2023/6/20 2023/6/19');
 BookSectionEnd();
 ?>
 <img src="covers/1010490173.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝sue1289整理製作，感謝邱五提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝sue1289整理製作，感謝邱五提供掃瞄檔。感謝Gilbert勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -56,5 +56,24 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(Gilbert 2023/6/20)<br>
+Mag︱lite/Mag-lite<br>
+Crown　Victoria/Crown Victoria<br>
+Not　you/Not you<br>
+V︱8/V-8（共四處）<br>
+麥　　坤/麥坤<br>
+FB1/ＦＢＩ<br>
+Be︱on︱the︱lookout/Be-on-the-lookout<br>
+什麼也沒發現/什麼也沒發現。<br>
+﹁你在軍中是個好憲兵嗎？﹂。/﹁你在軍中是個好憲兵嗎？﹂<br>
+有得逃/有得逃。<br>
+沒得躲/沒得躲。<br>
+已是最佳表現。　　他們經過/已是最佳表現。他們經過<br>
+杜馮索搖搖頭/杜馮索搖搖頭。<br>
+杜馮索沒接話/杜馮索沒接話。<br>
+C︱17/C-17<br>
+搗起耳朵/摀起耳朵<br>
+很響亮/很響亮。<br>
+垮坐/跨坐（共二處，原書有誤）<br>
 </font>
 </td></tr></table>
