Initial upload of audiobooks AB001 parts 40-42 and AB002 parts 01-07

--- a/book/83.html
+++ b/book/83.html
@@ -1,39 +1,39 @@
 <table BORDER="0" CELLSPACING="0" CELLPADDING="2" WIDTH="100%">
 <tr><td>
-<font color="CC0000">朱邦復</font>《<a href="?M=m&P=G83a:0">宇宙浪子一</a>》<a href="PDB/G/83a.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子一》<a href="https://haodooclassic.net/PDB/G/83a.pdb">[下載]</a>
  2002/6/10 (223K) 
 <br>
-<font color="CC0000">朱邦復</font>《<a href="?M=m&P=G83b:0">宇宙浪子二</a>》<a href="PDB/G/83b.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子二》<a href="https://haodooclassic.net/PDB/G/83b.pdb">[下載]</a>
  2002/6/10 (227K) 
 <br>
-<font color="CC0000">朱邦復</font>《<a href="?M=m&P=G83c:0">宇宙浪子三</a>》<a href="PDB/G/83c.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子三》<a href="https://haodooclassic.net/PDB/G/83c.pdb">[下載]</a>
  2002/6/10 (231K) 
 <br>
-<font color="CC0000">朱邦復</font>《<a href="?M=m&P=G83d:0">宇宙浪子四</a>》<a href="PDB/G/83d.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子四》<a href="https://haodooclassic.net/PDB/G/83d.pdb">[下載]</a>
  2002/6/10 (236K) 
 <br>
-<font color="CC0000">朱邦復</font>《<a href="?M=m&P=G83e:0">宇宙浪子五</a>》<a href="PDB/G/83e.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子五》<a href="https://haodooclassic.net/PDB/G/83e.pdb">[下載]</a>
  2002/6/10 (241K) 
 <br>
-<font color="CC0000">朱邦復</font>《<a href="?M=m&P=G83f:0">宇宙浪子六</a>》<a href="PDB/G/83f.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子六》<a href="https://haodooclassic.net/PDB/G/83f.pdb">[下載]</a>
  2002/6/10 (255K) 
 <br>
-<font color="CC0000">朱邦復</font>《<a href="?M=m&P=G83g:0">宇宙浪子七</a>》<a href="PDB/G/83g.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子七》<a href="https://haodooclassic.net/PDB/G/83g.pdb">[下載]</a>
  2002/6/10 (245K) 
 <br>
-<font color="CC0000">朱邦復</font>《<a href="?M=m&P=G83h:0">宇宙浪子八</a>》<a href="PDB/G/83h.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子八》<a href="https://haodooclassic.net/PDB/G/83h.pdb">[下載]</a>
  2002/6/10 (212K) 
 <br>
-<font color="CC0000">朱邦復</font>《<a href="?M=m&P=G83i:0">宇宙浪子九</a>》<a href="PDB/G/83i.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子九》<a href="https://haodooclassic.net/PDB/G/83i.pdb">[下載]</a>
  2002/6/10 (205K) 
 <br>
-<font color="CC0000">朱邦復</font>《<a href="?M=m&P=G83j:0">宇宙浪子十</a>》<a href="PDB/G/83j.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子十》<a href="https://haodooclassic.net/PDB/G/83j.pdb">[下載]</a>
  2002/6/10 (216K) 
 <br>
-<font color="CC0000">朱邦復</font>《<a href="?M=m&P=G83k:0">宇宙浪子十一</a>》<a href="PDB/G/83k.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子十一》<a href="https://haodooclassic.net/PDB/G/83k.pdb">[下載]</a>
  2002/6/10 (221K)
 <br>
-<font color="CC0000">朱邦復</font>《<a href="?M=m&P=G83l:0">宇宙浪子十二</a>》<a href="PDB/G/83l.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子十二》<a href="https://haodooclassic.net/PDB/G/83l.pdb">[下載]</a>
  2002/6/10 (250K) 
 <br>
 <br>
