Initial upload of audiobooks AB001 part 44 and AB003 parts 08-11

--- a/book/audioAB003.html
+++ b/book/audioAB003.html
@@ -8,12 +8,16 @@ require_once('player.php');
 <?php
 
 PlayMP3('AB003-01', '《序》劉小珍錄音 2023/6/17');
-PlayMP3('AB003-02', '《留情（一）》劉小珍錄音 2023/6/17');
-PlayMP3('AB003-03', '《留情（二）》劉小珍錄音 2023/6/17');
-PlayMP3('AB003-04', '《留情（三）》劉小珍錄音 2023/6/17');
-PlayMP3('AB003-05', '《留情（四）》劉小珍錄音 2023/6/17');
-PlayMP3('AB003-06', '《留情（五）》劉小珍錄音 2023/6/17');
-PlayMP3('AB003-07', '《留情（六）》劉小珍錄音 2023/6/17');
+PlayMP3('AB003-02', '第一篇《留情（一）》劉小珍錄音 2023/6/17');
+PlayMP3('AB003-03', '第一篇《留情（二）》劉小珍錄音 2023/6/17');
+PlayMP3('AB003-04', '第一篇《留情（三）》劉小珍錄音 2023/6/17');
+PlayMP3('AB003-05', '第一篇《留情（四）》劉小珍錄音 2023/6/17');
+PlayMP3('AB003-06', '第一篇《留情（五）》劉小珍錄音 2023/6/17');
+PlayMP3('AB003-07', '第一篇《留情（六）》劉小珍錄音 2023/6/17');
+PlayMP3('AB003-08', '第二篇《鴻鸞禧（一）》劉小珍錄音 2023/6/27');
+PlayMP3('AB003-09', '第二篇《鴻鸞禧（二）》劉小珍錄音 2023/6/27');
+PlayMP3('AB003-10', '第二篇《鴻鸞禧（三）》劉小珍錄音 2023/6/27');
+PlayMP3('AB003-11', '第二篇《鴻鸞禧（四）》劉小珍錄音 2023/6/27');
 
 ?>
 
