Upload revised book 17P7, 17q9, 17S8, and 17W4

--- a/book/17Q9.html
+++ b/book/17Q9.html
@@ -12,15 +12,15 @@ $title = '至死方休';
 $book = 'E17Q9';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/3/4 (546K) 2017/12/1 2017/10/6');
+ShowUpdbDownload('2023/7/4 (546K) 2023/3/4 2017/12/1 2017/10/6');
 ShowPrcDownload('2017/12/1 (548K) 2017/10/6');
 ShowMobiDownload('2017/12/1 (1544K) 2017/10/6');
-ShowEpubDownload('2023/3/4 (383K) 2017/12/1 2017/10/6');
-ShowVEpubDownload('2023/3/4 (383K) 2017/12/1 2017/10/6');
+ShowEpubDownload('2023/7/4 (383K) 2023/3/4 2017/12/1 2017/10/6');
+ShowVEpubDownload('2023/7/4 (383K) 2023/3/4 2017/12/1 2017/10/6');
 BookSectionEnd();
 ?>
 <img src="covers/17Q9.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者連育德。感謝Bee勘誤9處。感謝Gilbert勘誤。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者連育德。感謝Bee、Gilbert、sue1289勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之二</b><br>
 <br>
@@ -40,6 +40,34 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表</strong>：<br>
+(sue1289 2023/7/4)<br>
+麥葛斯問他/麥葛斯問他。<br>
+威密持/威密特<br>
+福待探險/福特探險<br>
+瞻養費/贍養費（２處）<br>
+那像伙/那傢伙<br>
+上瞠聲/上膛聲<br>
+要你照顧我。」他說。/要你照顧我。」她說。<br>
+把搶口壓/把槍口壓<br>
+一間持別/一間特別<br>
+些什麼人」/些什麼人。」<br>
+桃心木書架/桃花心木書架（原書錯）<br>
+對他．們說/對他們說<br>
+你捫有多少/你們有多少<br>
+自動步搶/自動步槍<br>
+不連貫。」   蓋伯說。/同一段<br>
+一攤血水/一灘血水（原書錯）<br>
+一攤攤逐漸/一灘灘逐漸（原書錯）<br>
+滿瞠可裝/滿膛可裝<br>
+靜覼其變/靜觀其變<br>
+的鞋頭．突然/的鞋頭，突然<br>
+推往左邊，直走到山/推往左邊，一直走到山<br>
+找出鎗匙/找出鑰匙<br>
+聽到，陣陣吶/聽到一陣陣吶<br>
+穿過瞠線/穿過膛線<br>
+千百之一秒/千分之一秒（原書錯）<br>
+在後瞠/在後膛<br>
+<br>
 (Gilbert 2023/3/4)<br>
 聚碳酸醋/聚碳酸酯<br>
 Memphis slim/Memphis Slim<br>
