--- a/book/17S8.html
+++ b/book/17S8.html
@@ -12,15 +12,15 @@ $title = '完美嫌犯';
 $book = 'E17S8';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/3/21 (488K) 2017/11/3');
+ShowUpdbDownload('2023/7/4 (488K) 2023/3/21 2017/11/3');
 ShowPrcDownload('2017/11/3 (475K)');
 ShowMobiDownload('2017/11/3 (1298K)');
-ShowEpubDownload('2023/3/21 (299K) 2017/11/3');
-ShowVEpubDownload('2023/3/21 (299K) 2017/11/3');
+ShowEpubDownload('2023/7/4 (299K) 2023/3/21 2017/11/3');
+ShowVEpubDownload('2023/7/4 (299K) 2023/3/21 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17S8.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者彭臨桂。感謝Gilbert勘誤。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者彭臨桂。感謝Gilbert、sue1289勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之九</b><br>
 <br>
@@ -32,6 +32,23 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(sue1289 2023/7/4)<br>
+通話紐/通話鈕<br>
+旋紐/旋鈕<br>
+DNA/ＤＮＡ<br>
+X光/Ｘ光<br>
+NBC/ＮＢＣ<br>
+那像伙/那傢伙<br>
+消失無縱/消失無蹤<br>
+是瘋子嗚/是瘋子嗎<br>
+花稍的/花俏的<br>
+咸覺很熟情也/感覺很熱情也<br>
+花稍條紋/花俏條紋<br>
+BMW/ＢＭＷ<br>
+她反問/她反問。<br>
+基本原埋/基本原理<br>
+維拉、迪/維拉迪<br>
+<br>
 (Gilbert 2023/03/21)<br>
 蹚這淌渾水/蹚這趟渾水（共二處）<br>
 按紐/按鈕<br>
