--- a/book/17W4.html
+++ b/book/17W4.html
@@ -12,15 +12,15 @@ $title = '此地不宜久留';
 $book = 'E17W4';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/3/23 (500K) 2017/11/3');
+ShowUpdbDownload('2023/7/4 (500K) 2023/3/23 2017/11/3');
 ShowPrcDownload('2017/11/3 (500K)');
 ShowMobiDownload('2017/11/3 (1466K)');
-ShowEpubDownload('2023/3/23 (388K) 2017/11/3');
-ShowVEpubDownload('2023/3/23 (388K) 2017/11/3');
+ShowEpubDownload('2023/7/4 (388K) 2023/3/23 2017/11/3');
+ShowVEpubDownload('2023/7/4 (388K) 2023/3/23 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17W4.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者黃鴻硯。感謝Gilbert勘誤。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者黃鴻硯。感謝Gilbert、sue1289勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之十三</b><br>
 <br>
@@ -36,6 +36,31 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(sue1289 2023/7/4)<br>
+奈米秒/奈秒（原書錯）<br>
+按紐/按鈕<br>
+桀驚不馴/桀驁不馴<br>
+抽身的一天。   最重要的是，/同一段<br>
+花稍/花俏<br>
+雅各，馬克/雅各．馬克（２處）<br>
+鬆餅．咖啡續杯/鬆餅，咖啡續杯<br>
+的團體聽/的團體廳（原書錯）<br>
+語言信箱/語音信箱（原書錯）<br>
+梢微/稍微<br>
+吉姆，克勞法/吉姆．克勞法<br>
+步搶/步槍<br>
+檢走了/撿走了<br>
+心埋上的/心理上的<br>
+跑向左邊兩邊/跑向左右兩邊（原書錯）<br>
+掮風/搧風<br>
+壓縮氫氣/壓縮氦氣（原書錯）<br>
+讓拖知道我/讓牠知道我<br>
+顧意/願意<br>
+輪到資料庫/輸到資料庫<br>
+血腋/血液<br>
+掮了他一個耳光/搧了他一個耳光<br>
+左渾一刀/左揮一刀<br>
+<br>
 (Gilbert 2023/03/23)<br>
 按紐/按鈕（共七處）<br>
 Asto﹁place/Astor Place<br>
