Upload revised book 17W7, 17V1, 17V2, and 17S2

--- a/book/17S2.html
+++ b/book/17S2.html
@@ -12,15 +12,15 @@ $title = '一觸即發';
 $book = 'E17S2';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/3/4 (560K) 2017/11/3');
+ShowUpdbDownload('2023/7/4 (560K) 2023/3/4 2017/11/3');
 ShowPrcDownload('2017/11/3 (560K)');
 ShowMobiDownload('2017/11/3 (1533K)');
-ShowEpubDownload('2023/3/4 (360K) 2017/11/3');
-ShowVEpubDownload('2023/3/4 (361K) 2017/11/3');
+ShowEpubDownload('2023/7/4 (360K) 2023/3/4 2017/11/3');
+ShowVEpubDownload('2023/7/4 (361K) 2023/3/4 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17S2.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者彭臨桂。感謝快雪勘誤1處。感謝Gilbert勘誤。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者彭臨桂。感謝快雪勘誤1處。感謝Gilbert、sue1289勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之三</b><br>
 <br>
@@ -36,6 +36,14 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表</strong>：<br>
+(sue1289 2023/7/4)<br>
+忙忙在廊地板/忙忙在門廊地板<br>
+据了掂/掂了掂<br>
+一滴淚珠/一滴淚珠。<br>
+抽裡的/堆廢物/抽屜裡的一堆廢物<br>
+撕嘶聲/嘶嘶聲<br>
+幼稚圜/幼稚園<br>
+<br>
 (Gilbert 2023/03/04)<br>
 柯斯持洛/柯斯特洛（共二處）<br>
 普待南郡/普特南郡<br>
