--- a/book/17V1.html
+++ b/book/17V1.html
@@ -12,15 +12,15 @@ $title = '地獄藍調';
 $book = 'E17V1';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/3/4 (574K) 2017/11/3');
+ShowUpdbDownload('2023/7/4 (574K) 2023/3/4 2017/11/3');
 ShowPrcDownload('2017/11/3 (574K)');
 ShowMobiDownload('2017/11/3 (1600K)');
-ShowEpubDownload('2023/3/4 (390K) 2017/11/3');
-ShowVEpubDownload('2023/3/4 (390K) 2017/11/3');
+ShowEpubDownload('2023/7/4 (390K) 2023/3/4 2017/11/3');
+ShowVEpubDownload('2023/7/4 (390K) 2023/3/4 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17V1.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝ansa按掃描檔整理製作。譯者章欣。感謝Gilbert勘誤。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝ansa按掃描檔整理製作。譯者章欣。感謝Gilbert、sue1289勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之一</b><br>
 <br>
@@ -38,6 +38,31 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表</strong>：<br>
+(sue1289 2023/7/4)<br>
+獎脾/獎牌<br>
+捅樓子/捅婁子<br>
+捅的樓子/捅的婁子<br>
+圍籬聲立/圍籬聳立<br>
+又躺下哈伯/又躺下。哈伯<br>
+略略笑/咯咯笑<br>
+，速被人從/，還被人從<br>
+更拽氣/更洩氣<br>
+他在道裡/他在這裡<br>
+淳現/浮現<br>
+現金賈了/現金買了<br>
+蘿絲說/蘿絲可說<br>
+百元鈔察/百元鈔票<br>
+道件事/這件事<br>
+打身是傷/打得渾身是傷<br>
+花稍貨/花俏貨<br>
+另外，個/另外一個<br>
+鎖上門．/鎖上門，<br>
+是七點半．/是七點半，<br>
+轘車/轎車<br>
+拿出來．/拿出來，<br>
+往後仰，    把手臂/同一段<br>
+買了，張/買了一張<br>
+<br>
 (Gilbert 2023/3/4)<br>
 他看了我好，會兒。/他看了我好一會兒。<br>
 那種宏亮的長音不，樣/那種宏亮的長音不一樣<br>
