--- a/book/17V2.html
+++ b/book/17V2.html
@@ -12,15 +12,15 @@ $title = '無間任務';
 $book = 'E17V2';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/3/21 (525K) 2017/11/3');
+ShowUpdbDownload('2023/7/4 (525K) 2023/3/21 2017/11/3');
 ShowPrcDownload('2017/11/3 (525K)');
 ShowMobiDownload('2017/11/3 (1433K)');
-ShowEpubDownload('2023/3/21 (332K) 2017/11/3');
-ShowVEpubDownload('2023/3/21 (332K) 2017/11/3');
+ShowEpubDownload('2023/7/4 (332K) 2023/3/21 2017/11/3');
+ShowVEpubDownload('2023/7/4 (332K) 2023/3/21 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17V2.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者彭臨桂。感謝Gilbert勘誤。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者彭臨桂。感謝Gilbert、sue1289勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之七</b><br>
 <br>
@@ -38,6 +38,36 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(sue1289 2023/7/4)<br>
+花稍/花俏（４處）<br>
+綁架，營救，   貝克家。我得混進貝克家/同一段<br>
+彈瞠/彈膛<br>
+毒飯/毒販<br>
+殺警兒手/殺警兇手<br>
+她還是著靜坐著/她還是靜靜坐著<br>
+保鐮/保鑣<br>
+「那當然。」，「如果保鑣出來了/「那當然。」   「如果保鑣出來了(另起一段)<br>
+瞠線/膛線<br>
+拉開抽雁/拉開抽屜<br>
+整把搶增加/整把槍增加<br>
+深員/探員<br>
+加上鍵條/加上鏈條<br>
+波持蘭/波特蘭<br>
+他又說一遍/他又說一遍。<br>
+一百九十膀重/一百九十磅重<br>
+綴學/輟學<br>
+龐大軀擠過的/龐大身軀擠過的<br>
+板機/扳機<br>
+埋察/理察（２處）<br>
+後們經過他們/我們經過他們<br>
+玻璃外遺有幾根/玻璃外還有幾根<br>
+佈滿皴紋/佈滿皺紋<br>
+上了瞠/上了膛<br>
+什麼也沒有．倉庫裡的/什麼也沒有，倉庫裡的<br>
+被眨為/被貶為<br>
+魔嘴豆/鷹嘴豆<br>
+石青粉塵/石膏粉塵<br>
+<br>
 (Gilbert 2023/03/21)<br>
 陡哨/陡峭（共三處）<br>
 橋車/轎車（共三處）<br>
