--- a/book/17W7.html
+++ b/book/17W7.html
@@ -12,15 +12,15 @@ $title = '厄運連鎖';
 $book = 'E17W7';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/3/23 (469K) 2017/11/3');
+ShowUpdbDownload('2023/7/4 (469K) 2023/3/23 2017/11/3');
 ShowPrcDownload('2017/11/3 (466K)');
 ShowMobiDownload('2017/11/3 (1375K)');
-ShowEpubDownload('2023/3/23 (366K) 2017/11/3');
-ShowVEpubDownload('2023/3/23 (366K) 2017/11/3');
+ShowEpubDownload('2023/7/4 (366K) 2023/3/23 2017/11/3');
+ShowVEpubDownload('2023/7/4 (366K) 2023/3/23 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17W7.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者陳榮彬。感謝Gilbert勘誤。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者陳榮彬。感謝Gilbert、sue1289勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之十一</b><br>
 <br>
@@ -36,6 +36,27 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(sue1289 2023/7/4)<br>
+像伙/傢伙<br>
+腳踩中間/腳踝中間<br>
+狼角色/狠角色<br>
+X光/Ｘ光<br>
+去一趙/去一趟<br>
+鏡匙/鑰匙<br>
+該走一趙/該走一趟<br>
+LED燈/ＬＥＤ燈<br>
+被沖淡，談   話也被/同一段<br>
+持別的人/特別的人<br>
+開搶打你/開槍打你<br>
+於機器   這種東西/同一段<br>
+花稍/花俏<br>
+有名脾/有名牌<br>
+V8引擎/Ｖ８引擎<br>
+跑向隱隱那輛隱隱散發/跑向那輛隱隱散發<br>
+後面警笛嗚嗚/後面的警笛嗚嗚<br>
+伏地梃身/伏地挺身<br>
+點頭說「我換個/點頭說：「我換個<br>
+<br>
 (Gilbert 2023/03/23)<br>
 布蘭持/布蘭特<br>
 D︱A/DIA<br>
