Upload revised book 17X5, 17U5, 17T3, and 17S6

--- a/book/17S6.html
+++ b/book/17S6.html
@@ -12,16 +12,16 @@ $title = '模擬刺客';
 $book = 'E17S6';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/3/16 (556K) 2017/11/3');
+ShowUpdbDownload('2023/7/6 (556K) 2023/3/16 2017/11/3');
 ShowPrcDownload('2017/11/3 (552K)');
 ShowMobiDownload('2017/11/3 (1506K)');
-ShowEpubDownload('2023/3/16 (351K) 2017/11/3');
-ShowVEpubDownload('2023/3/16 (351K) 2017/11/3');
+ShowEpubDownload('2023/7/6 (351K) 2023/3/16 2017/11/3');
+ShowVEpubDownload('2023/7/6 (351K) 2023/3/16 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17S6.jpg" HSPACE=8 vspace=2 align=right>
 <img src="covers/17S6a.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃【典藏版】，感謝邱五提供掃描檔。感謝Angela Huang按掃描檔整理製作。譯者陳榮彬。感謝Gilbert勘誤。<br>
+好讀書櫃【典藏版】，感謝邱五提供掃描檔。感謝Angela Huang按掃描檔整理製作。譯者陳榮彬。感謝Gilbert、sue1289勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之六</b><br>
 <br>
@@ -35,6 +35,52 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(sue1289 2023/7/6)<br>
+一樣寶貴－但這裡/一樣寶貴──但這裡<br>
+T恤/Ｔ恤（多處）<br>
+晁總統開槍/朝總統開槍<br>
+像把小刀可能有三吋半長把手是/像把小刀，可能有三吋半長，把手是<br>
+事實她上沒有/事實上她沒有（原書錯）<br>
+Ml6/M16（３處）<br>
+你捫第一/你們第一<br>
+一、兩兩小時/一、兩小時<br>
+可以踉她們/可以跟她們<br>
+沉默書似的/沉默寡言似的<br>
+沒有我們在打掃/沒有，我們在打掃<br>
+去上廊所/去上廁所<br>
+都是唐家服/都是居家服<br>
+之間都沒看過/之前都沒看過<br>
+重五十膀/重五十磅<br>
+裝好彈厘慢/裝好彈匣慢<br>
+她的穌胸/她的酥胸<br>
+踉喬伊/跟喬伊<br>
+惡露其實/惡霸其實<br>
+面對規實/面對現實<br>
+事情清埋掉/事實清理掉<br>
+接觸．錄音機/接觸，錄音機<br>
+你大可假裝成我，想說多久就說多久，你這是故意搞破壞！」/你大可假裝成我，想說多久就說多久。」   「你這是故意搞破壞！」（分成兩段）<br>
+班濃看起來/班儂看起來<br>
+前停下那裡離阿姆/前停下，那裡離阿姆<br>
+隸屬靨於三個/隸屬於三個<br>
+在你身上．如果你/在你身上，如果你<br>
+什麼印象？．/什麼印象？<br>
+石裔面具/石膏面具<br>
+氣氛完全不同i他們大/氣氛完全不同，他們大<br>
+市餐局/市警局<br>
+李奇說「好，仔細看/李奇說：「好，仔細看<br>
+為了義芙蘿莉絲/為了芙蘿莉絲<br>
+深奧了如果他/深奧了，如果他<br>
+法闌西絲/法蘭西絲<br>
+阿姆斯肚/阿姆斯壯<br>
+死規定是．絕對不/死規定是，絕對不<br>
+遮蓬出口/遮篷出口<br>
+鐘才完全   離開他的/同一段<br>
+階悌/階梯<br>
+他的鐵鈷上/他的鐵鉆上<br>
+方群山．伸手不見/方群山，伸手不見<br>
+輪眙/輪胎<br>
+那像伙/那傢伙<br>
+<br>
 (Gilbert 2023/03/16)<br>
 平整地親桌子角落/平整地放在桌子角落<br>
 ﹁摔跤手﹂/﹁摔跤手﹂。<br>
