--- a/book/17T3.html
+++ b/book/17T3.html
@@ -12,15 +12,15 @@ $title = '假面人質';
 $book = 'E17T3';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/3/23 (449K) 2017/11/3');
+ShowUpdbDownload('2023/7/6 (449K) 2023/3/23 2017/11/3');
 ShowPrcDownload('2017/11/3 (440K)');
 ShowMobiDownload('2017/11/3 (1295K)');
-ShowEpubDownload('2023/3/23 (342K) 2017/11/3');
-ShowVEpubDownload('2023/3/23 (342K) 2017/11/3');
+ShowEpubDownload('2023/7/6 (342K) 2023/3/23 2017/11/3');
+ShowVEpubDownload('2023/7/6 (342K) 2023/3/23 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17T3.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者陳明哲。感謝Jyayee Yen勘誤4處。感謝Gilbert勘誤。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者陳明哲。感謝Jyayee Yen、Gilbert、sue1289勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之十</b><br>
 <br>
@@ -36,6 +36,77 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(sue1289 2023/7/6)<br>
+﹃/'<br>
+T恤/Ｔ恤<br>
+持調組/特調組<br>
+A隊/Ａ隊<br>
+B隊/Ｂ隊<br>
+綠燈．雖然路上/綠燈，雖然路上<br>
+C列車/Ｃ列車<br>
+打包票。」藍恩沒有/分段<br>
+藍提著一個/藍恩提著一個<br>
+A柱/Ａ柱<br>
+翻到G/翻到Ｇ<br>
+翻到B/翻到Ｂ<br>
+有根充分/有很充分<br>
+要能綜觀全局。」……李奇點點頭/「要能綜觀全局。」……「對街？」……李奇點點頭（補漏字）<br>
+店面不可在完整/店面不可能在完整<br>
+L形/Ｌ形<br>
+飽華利/鮑華利<br>
+梢微轉向/稍微轉向<br>
+李奇認為．椅子/李奇認為，椅子<br>
+有人替他們復仇/有人替她們復仇（原書有誤）<br>
+一我想等一等。/「我想等一等。」<br>
+找到什麼？」波琳翻回/分段<br>
+充電器一拿起來/充電器一起拿起來（原書有誤）<br>
+H開頭/Ｈ開頭<br>
+國防部。」一/國防部。」<br>
+4L/４Ｌ<br>
+2L/２Ｌ<br>
+2R/２Ｒ<br>
+3L/３Ｌ<br>
+3R/３Ｒ<br>
+4R/４Ｒ<br>
+4跟L/４跟Ｌ<br>
+抹起眉毛/挑起眉毛<br>
+他說是什麼鬼話/他說得是什麼鬼話<br>
+不覺得嗎？」派蒂停了一下/分段<br>
+電話亭，撥打波琳的手機/電話亭，撥打波琳的手機。<br>
+浴虹/浴缸<br>
+濟進來/擠進來<br>
+眼清/眼睛<br>
+綁架凱持/綁架凱特<br>
+看到他們朝妳/看到牠們朝妳（原書有誤）<br>
+穿遇拉圾/穿過垃圾<br>
+G．泰勒/Ｇ．泰勒<br>
+G代表什麼/Ｇ代表什麼<br>
+J．沃克公園/Ｊ．沃克公園<br>
+縮寫G。/縮寫Ｇ。<br>
+縮寫是S/縮寫是Ｓ<br>
+他們會反抗/她們會反抗<br>
+X光/Ｘ光<br>
+百分之十五。」李奇說：/分段<br>
+V領/Ｖ領<br>
+的是S/的是Ｓ<br>
+找到的S/找到的Ｓ<br>
+J＆L/Ｊ＆Ｌ<br>
+他會跟你說。」李奇說/分段<br>
+那麼擠？」李奇沒有回答/分段<br>
+Ml高速公路/M1高速公路<br>
+瞻養費/贍養費<br>
+在Ml上面/在M1上面<br>
+泛教堂，聖瑪麗/泛教堂．聖瑪麗<br>
+拿著上瞠的/拿著上膛的<br>
+凱持弄了些/凱特弄了些<br>
+的邊陂爬上/的邊坡爬上<br>
+九把工H＆K/九把Ｈ＆Ｋ<br>
+恨疲倦/很疲倦<br>
+DNA/ＤＮＡ<br>
+邊坡陡哨/邊坡陡峭<br>
+Ml戰車/Ｍ１戰車<br>
+U型/Ｕ型<br>
+<br>
 (Gilbert 2023/03/23)<br>
 凱待/凱特（共二處）<br>
 1分鐘/一分鐘<br>
