--- a/book/17U5.html
+++ b/book/17U5.html
@@ -12,15 +12,15 @@ $title = '雙面敵人';
 $book = 'E17U5';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/3/11 (535K) 2017/11/3');
+ShowUpdbDownload('2023/7/6 (535K) 2023/3/11 2017/11/3');
 ShowPrcDownload('2017/11/3 (523K)');
 ShowMobiDownload('2017/11/3 (1444K)');
-ShowEpubDownload('2023/3/11 (343K) 2017/11/3');
-ShowVEpubDownload('2023/3/11 (343K) 2017/11/3');
+ShowEpubDownload('2023/7/6 (343K) 2023/3/11 2017/11/3');
+ShowVEpubDownload('2023/7/6 (343K) 2023/3/11 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17U5.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者陳榮彬。感謝Gilbert勘誤。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者陳榮彬。感謝Gilbert、sue1289勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之八</b><br>
 <br>
@@ -35,7 +35,84 @@ BookSectionEnd();
 李查德在《雙面敵人》中，運用洗鍊的文字，將數起謀殺案巧妙地串聯起來，角色之間的推理攻防和心理描寫更是張力十足，堪稱李查德的顛峰之作！難怪推出之後不但獲獎連連，各大媒體也是一片好評！英國《獨立報》更大力稱讚：「李查德的麻煩之處在於，一旦你開始翻閱，就很難放下這該死的書！」<br>
 <br>
 <font size=2>
-<strong>勘誤表</strong>：<br>
+<strong>勘誤表：</strong>
+(sue1289 2023/7/6)<br>
+HMMＷV/ＨＭＭＷＶ<br>
+KRK/ＫＲＫ<br>
+一個1字形的/一個１字形的<br>
+M43/Ｍ４３<br>
+也許是跟LL/也許是跟ＬＬ<br>
+輪眙/輪胎<br>
+李昂．蓋伯在我/里昂．蓋伯在我<br>
+一大攤血/一大灘血<br>
+身高比他高出/身高比她高出（原書有誤）<br>
+她則顯得嬌小，另一張照片則是/她則顯得嬌小。　   另一張照片則是（分段）<br>
+C130/Ｃ１３０（多處）<br>
+多少錢？」他說：「一百元/多少錢？」   他說：「一百元（分段）<br>
+的地方．四個人/的地方，四個人<br>
+如果他在十一點/如果她在十一點（原書有誤）<br>
+一道W形吧台/一道Ｗ形吧台<br>
+W3級/Ｗ３級（多處）<br>
+W4級/Ｗ４級（多處）<br>
+就更雜辦了/就更難辦了<br>
+威拉點點頭。「哪一個？」/威拉點點頭。   「哪一個？」（分段）<br>
+「真不上道。」，我點頭說/「真不上道。」   我點頭說（分段）<br>
+把閃光燈拿下來/把手電筒拿下來（原書有誤）<br>
+看A片/看Ａ片<br>
+被發規時的樣子/被發現時的樣子<br>
+D隊/Ｄ隊<br>
+令給你，那裡靜/令給你，在那裡靜<br>
+但我錯了/但我錯了。<br>
+我不發一語。「而你剛剛也/我不發一語。   「而你剛剛也（分段）<br>
+五分鐘後他帶著/五分鐘後她帶著（原書有誤）<br>
+U形/Ｕ形<br>
+乖乖脾/乖乖牌<br>
+會溜別的地方/會溜到別的地方<br>
+女主角獎/女主角獎。<br>
+A點/Ａ點（多處）<br>
+B點/Ｂ點（多處）<br>
+一個一五呎/一個十五呎<br>
+別碰」。/別碰。」<br>
+S型/Ｓ型<br>
+像個J/像個Ｊ<br>
+看著對成/看著對方<br>
+南卡羅來納/南卡羅萊納<br>
+羚羊SS型/羚羊ＳＳ型<br>
+H＆K/Ｈ＆Ｋ<br>
+GRU/ＧＲＵ<br>
+可以使甩/可以使用<br>
+進出的狀識/進出的狀況<br>
+Al、A2/A1、A2<br>
+X光/Ｘ光（多處）<br>
+「柵攔」/「柵欄」<br>
+U字型/Ｕ字型<br>
+DNA/ＤＮＡ<br>
+那麼一回事。」   她睜開眼睛/同一段<br>
+這個半徑距離/這個半徑距離的平方（原書有誤）<br>
+旅吝/旅客<br>
+這趙旅程/這趟旅程<br>
+M4/Ｍ４<br>
+MlA1艾伯朗姆斯/Ｍ１Ａ１艾伯朗姆斯<br>
+唱聲漸漸漸消逝/唱聲漸漸消逝<br>
+我檔在它的/我擋在它的<br>
+唯 一件褲管/唯一一件褲管<br>
+中音C下面那條G弦/中音Ｃ下面那條Ｇ弦<br>
+按下3/按下３<br>
+按下9/按下９<br>
+E5/Ｅ５<br>
+E4/Ｅ４<br>
+「好。」我說：「明天見/「好。」   我說：「明天見（分段）<br>
+F字首/Ｆ字首<br>
+P字首/Ｐ字首<br>
+C字首/Ｃ字首<br>
+K人高手/Ｋ人高手<br>
+自己去。」桑瑪說：「你不可以/自己去。」   桑瑪說：「你不可以（分段）<br>
+B環、C環與D環/Ｂ環、Ｃ環與Ｄ環<br>
+E環/Ｅ環<br>
+她們在四日/他們在四日<br>
+M字/Ｍ字<br>
+T ．E ．P/Ｔ．Ｅ．Ｐ<br>
+<br>
 (Gilbert 2023/3/11)<br>
 琢木鳥/啄木鳥<br>
 山姆大叔_/山姆大叔<br>
