--- a/book/17X5.html
+++ b/book/17X5.html
@@ -12,15 +12,15 @@ $title = '闇夜回聲';
 $book = 'E17X5';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/3/11 (539K) 2017/12/1');
+ShowUpdbDownload('2023/7/6 (539K) 2023/3/11 2017/12/1');
 ShowPrcDownload('2017/12/1 (529K)');
 ShowMobiDownload('2017/12/1 (1446K)');
-ShowEpubDownload('2023/3/11 (336K) 2017/12/1');
-ShowVEpubDownload('2023/3/11 (336K) 2017/12/1');
+ShowEpubDownload('2023/7/6 (336K) 2023/3/11 2017/12/1');
+ShowVEpubDownload('2023/7/6 (336K) 2023/3/11 2017/12/1');
 BookSectionEnd();
 ?>
 <img src="covers/17X5.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者陳明哲。感謝Gilbert勘誤。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者陳明哲。感謝Gilbert、sue1289勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之五</b><br>
 <br>
@@ -36,6 +36,56 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表</strong>：<br>
+(sue1289 2023/7/6)<br>
+沒有信用但有張/沒有信用卡，但有張<br>
+費曲彩帶/彎曲彩帶<br>
+舌頭仲了出來/舌頭伸了出來<br>
+那是大型V8/那是大型Ｖ８<br>
+規在把馬/現在把馬<br>
+去了趙廁所/去了趟廁所<br>
+感覺到 他們在/感覺到他們在<br>
+T恤/Ｔ恤（多處）<br>
+麥草桿/麥草稈<br>
+他們說這逼你掃/他們說我逼你掃<br>
+夜巴比沉默/巴比沉默<br>
+朋友的兒手/朋友的兇手<br>
+除許他後來/除非他後來<br>
+在哪裡？」她指著天花板/在哪裡？」　　　她指著天花板（分段）<br>
+T字形/Ｔ字形<br>
+X光/Ｘ光（多處）<br>
+腿還粗：必要時/腿還粗，必要時<br>
+所以剩卜的/所以剩下的<br>
+他說她誰都不要/她說她誰都不要（原書錯）<br>
+第二個是家裡（J ），第三個是工作（J ）/第二個是家裡（Ｊ），第三個是工作（Ｊ）<br>
+J應該是男/Ｊ應該是男<br>
+黑色A字形/黑色Ａ字形<br>
+像渾手/像揮手<br>
+持別靈敏/特別靈敏<br>
+羅斯提/羅斯緹<br>
+對用線/對角線<br>
+卻斯待．A ．亞瑟/卻斯待．Ａ．亞瑟<br>
+不過對還是對巴比/不過還是對巴比（原書錯）<br>
+巴比到屋外/巴比到屋外。<br>
+一攤濕濕/一灘濕濕（原書錯）<br>
+李用雨刷/李奇用雨刷<br>
+第三把，輪流裝填。   一發制式，一發/同一段<br>
+FBI/ＦＢＩ<br>
+九〇手搶/九〇手槍<br>
+夜下一道閃電/下一道閃電<br>
+一灘一攤/一灘一灘（原書錯）<br>
+絲也一樣/絲也一樣。<br>
+自動手搶/自動手槍<br>
+開著福待/開著福特<br>
+BMW/ＢＭＷ<br>
+AAA雜誌裡/ＡＡＡ雜誌裡<br>
+小包DNA/小包ＤＮＡ<br>
+變成U形/變成Ｕ形<br>
+U形停車/Ｕ形停車<br>
+B計畫/Ｂ計畫<br>
+敲敲福持/敲敲福特<br>
+U形底部/Ｕ形底部<br>
+福待發動/福特發動<br>
+<br>
 (Gilbert 2023/3/11)<br>
 按紐/按鈕（共二處）<br>
 李出數著/李奇數著<br>
