Upload revised book 17V4, 1681, 10N5, and 1010490183

--- a/Share/1010490183.html
+++ b/Share/1010490183.html
@@ -12,13 +12,13 @@ $title = '陪審員';
 $book = 'P1010490183';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/6/14');
-ShowEpubDownload('2023/6/14');
-ShowVEpubDownload('2023/6/14');
+ShowUpdbDownload('2023/7/6 2023/6/14');
+ShowEpubDownload('2023/7/6 2023/6/14');
+ShowVEpubDownload('2023/7/6 2023/6/14');
 BookSectionEnd();
 ?>
 <img src="covers/1010490183.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝sue1289整理製作，感謝Angela Huang提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝sue1289整理製作，感謝Angela Huang提供掃瞄檔。感謝Gilbert勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -54,5 +54,18 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(Gilbert 2023/7/6)<br>
+Buck︱Rogers/Buck-Rogers<br>
+JXA︱385/JXA-385<br>
+piston︱straight/piston-straight<br>
+Blast︱Ｏ︱Rama/Blast-Ｏ-Rama<br>
+﹁但是！忘了妳的藝術吧！/﹁但是！忘了妳的藝術吧！﹂<br>
+那是同一個人,/那是同一個人；<br>
+Luca﹃s/Luca's<br>
+水姪/水蛭<br>
+我猜他天要騎/我猜他今天要騎<br>
+哈雷車/哈雷機車（原書有誤）<br>
+混身是膽/渾身是膽（原書有誤）<br>
+重覆/重複（原書有誤，依劍輝前輩之錯別字表勘誤）<br>
 </font>
 </td></tr></table>
