--- a/Share/10N5.html
+++ b/Share/10N5.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("蔡駿《荒村公寓》");
+SetTitle("蔡駿【荒村公寓】");
 SetLink('<a href="?M=hd&P=fiction-3">小說園地 書目</a>');
 </script>
 
@@ -12,18 +12,40 @@ $title = '荒村公寓';
 $book = 'I10N5';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2010/9/21 (315K)');
+ShowUpdbDownload('2023/7/6 (315K) 2010/9/21');
 ShowPdbDownload('2010/9/21 (304K)');
 ShowPrcDownload('2010/9/21 (326K)');
-ShowEpubDownload('2010/9/21 (224K)');
+ShowEpubDownload('2023/7/6 (224K) 2010/9/21');
+ShowVEpubDownload('2023/7/6 (224K)');
 BookSectionEnd();
 ?>
-好讀書櫃《經典版》，感謝Kendrick Ho整理製作。<br>
+<img src="covers/10N5.jpg" HSPACE=8 align=right>
+好讀書櫃【典藏版】，感謝Kendrick Ho整理製作。感謝Gilbert勘誤。<br>
+<br>
+<strong>本書簡介：</strong><br>
 <br>
 《荒村公寓》講述的是一個恐怖至極卻又唯美傷感的故事。在令人窒息的緊張氣氛中，深沈的愛超越了五千年的時空，超越了都市與荒村，超越了生命與死亡。一旦打開《荒村公寓》，就會擁有一個刻骨銘心的夜晚。<br>
 <br>
 作者蔡駿，1978年生於上海，長於上海。從二十二歲起開始發表小說，便獲得「人民文學。貝塔斯曼文學新秀獎」。2001年長篇驚悚小說《病毒》上市後，在中國大陸受到非常高度的矚目，至今已出版多部屬於華人的「心理懸疑小說」，作品也被改編成電視劇，廣受好評。包括《荒村公寓》在內的多部作品，也都曾創造出上市數日，即熱銷超過十萬冊的佳績。<br>
 <br>
-作者其它著作《病毒》(中國戲劇出版社)、《詛咒》(中國社會科學出版社)、《貓眼》、《神在看著你》(中國電影出版社)、《愛人的頭顱》、《天寶大球場的陷落》(台灣高談文化事業)、《夜半笛聲》(中國電影出版社)、《幽靈客棧》(雲南人民出版社)、《地獄的第十九層》 (接力出版社)。
-
+作者其它著作《病毒》(中國戲劇出版社)、《詛咒》(中國社會科學出版社)、《貓眼》、《神在看著你》(中國電影出版社)、《愛人的頭顱》、《天寶大球場的陷落》(台灣高談文化事業)、《夜半笛聲》(中國電影出版社)、《幽靈客棧》(雲南人民出版社)、《地獄的第十九層》 (接力出版社)。<br>
+<br>
+<strong>作者簡介：</strong><br>
+<br>
+<font size=2>
+<strong>勘誤表：</strong><br>
+(Gilbert 2023/7/6)<br>
+我想我可以給你以支持/我想我可以支持你<br>
+涮完了牙/刷完了牙<br>
+意向不到/意想不到<br>
+手電/手電筒（共四十處，僅寫手電而非手電筒；亦有部分段落使用正確詞語）<br>
+蹩在心裡/憋在心裡<br>
+從水來撈出來似的/從水裡撈出來似的<br>
+麻風/痲瘋（共三處）<br>
+麻瘋/痲瘋（共七處）<br>
+鐐拷/鐐銬<br>
+憑白無故/平白無故<br>
+衛生間/洗手間（共十五處，衛生間為大陸用法也不算錯誤，但因台灣出版之正體中文版用洗手間，故統一依掃瞄檔修改）<br>
+網吧/網咖（共四處，網吧為大陸用法也不算錯誤，但因台灣出版之正體中文版用網咖，故統一依掃瞄檔修改）<br>
+</font>
 </td></tr></table>
