--- a/book/1681.html
+++ b/book/1681.html
@@ -12,15 +12,15 @@ $title = '倪匡短篇';
 $book = 'G1681';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2016/5/6 (192K) 2016/8/5');
+ShowUpdbDownload('2023/7/6(192K) 2016/5/6 2016/8/5');
 ShowPrcDownload('2016/5/6 (196K) 2016/8/5');
 ShowMobiDownload('2016/5/6 (616K) 2016/8/5');
-ShowEpubDownload('2016/5/6 (170K) 2016/8/5');
-ShowVEpubDownload('2016/5/6 (170K) 2016/8/5');
+ShowEpubDownload('2023/7/6 (170K) 2016/5/6 2016/8/5');
+ShowVEpubDownload('2023/7/6 (170K) 2016/5/6 2016/8/5');
 BookSectionEnd();
 ?>
 <img src="covers/1681.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝henry142參照原書整理製作。感謝chin223提供掃描檔。感謝Rick勘誤1處。<br>
+好讀書櫃《典藏版》，感謝henry142參照原書整理製作。感謝chin223提供掃描檔。感謝Rick、博龍勘誤。<br>
 <br>
 在倪匡心目中，自認用心去寫的，有《倪匡短篇》，每篇二千餘字，到最後幾十個字，才是精妙所在，五十二篇「極短篇」小說，盡顯倪匡深厚的文字功力，直叫書迷大呼過癮。<br>
 <br>
@@ -30,7 +30,27 @@ BookSectionEnd();
 「仍是堅持一貫的看法，小說，不論是長是短，是方是圓，是硬是軟，是黑是白，最重要的，是叫人看得下去，覺得好看。」──倪匡<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(博龍 2023/7/6)<br>
+把手放在她的盾頭上/把手放在她的肩頭上<br>
+伸手按住了他的盾/伸手按住了他的肩<br>
+同事聳了聳盾/同事聳了聳肩<br>
+雙臂掛在他的盾上/雙臂掛在他的肩上<br>
+可是總時不時深深吸一口氣︱︱/可是總時不時深深吸一口氣；<br>
+幾乎和包裹同時落水︱︱/幾乎和包裹同時落水；<br>
+孩子的身份已被確定︱︱/孩子的身份已被確定：<br>
+永保鑣局保的鑣︱︱/永保鑣局保的鑣：<br>
+判決相當嚴︱︱/判決相當嚴：<br>
+一面心中在計算︱︱/一面心中在計算：<br>
+被所有人道忘了/被所有人遺忘了<br>
+提出了警告︱︱/提出了警告：<br>
+還是那句話：「有報應啊︱︱」/還是那句話：﹁有報應啊！﹂<br>
+﹁安靜︱︱﹂/﹁安靜！﹂<br>
+初初看的人/初看的人（原書有誤）<br>
+生理上的發洩︱︱/生理上的發洩；<br>
+也沒有人追究︱︱/也沒有人追究。<br>
+﹁沈紹安︱︱/﹁沈紹安！<br>
+<br>
 (Rick 2016/8/5)<br>
 幫助知道/幫主知道<br>
 <br>
@@ -38,7 +58,6 @@ BookSectionEnd();
 直人心坎/直入心坎<br>
 傅統/傳統<br>
 心無旁鶩/心無旁騖<br>
-<img src="covers/1681a.jpg" HSPACE=8 align=right>
 才人黑/才入黑<br>
 黑裹俏/黑裏俏<br>
 裡/裏<br>
