--- a/book/17V4.html
+++ b/book/17V4.html
@@ -12,15 +12,15 @@ $title = '一無所懼';
 $book = 'E17V4';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/3/23 (504K) 2017/11/3');
+ShowUpdbDownload('2023/7/6 (504K) 2023/3/23 2017/11/3');
 ShowPrcDownload('2017/11/3 (505K)');
 ShowMobiDownload('2017/11/3 (1466K)');
-ShowEpubDownload('2023/3/23 (382K) 2017/11/3');
-ShowVEpubDownload('2023/3/23 (382K) 2017/11/3');
+ShowEpubDownload('2023/7/6 (382K) 2023/3/23 2017/11/3');
+ShowVEpubDownload('2023/7/6 (382K) 2023/3/23 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17V4.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者彭臨桂、黃鴻硯。感謝Gilbert勘誤。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者彭臨桂、黃鴻硯。感謝Gilbert、sue1289勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之十二</b><br>
 <br>
@@ -36,6 +36,81 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(sue1289 2023/7/6)<br>
+揮打著空/揮打著空氣<br>
+這個地方。」「沒錯。」/分段<br>
+是了。」「你得離開/分段<br>
+在這裡。」李奇說：/分段<br>
+對方說「左轉，/對方說：「左轉，<br>
+APＯ信箱/APO信箱<br>
+中央是有工PD/中央是有HPD<br>
+扭曲的數字8/扭曲的數字８<br>
+V8/V-8<br>
+柵攔/柵欄<br>
+C字/Ｃ字<br>
+D字/Ｄ字<br>
+C和D/Ｃ和Ｄ<br>
+見過這個人。/見過這個人。」<br>
+第二部警察還停在/第二部警車還停在（原書有誤）<br>
+D檔/Ｄ檔<br>
+T恤/Ｔ恤<br>
+V領/Ｖ領<br>
+A柱/Ａ柱<br>
+提防．還帶有敵意/提防，還帶有敵意<br>
+他們....全都很疲/同段<br>
+一百四十膀/一百四十磅<br>
+這是他的鎮。」李奇說：/分段<br>
+太多次了．朋友/太多次了，朋友<br>
+掌了一記右直拳/賞了一記右直拳（原書有誤）<br>
+復審/覆審（原書有誤）<br>
+很感激。」葛納太太愣了/分段<br>
+T字/Ｔ字<br>
+一看發色/一看髮色（原書有誤）<br>
+8字/８字<br>
+重重坐下．整個人/重重坐下，整個人<br>
+P檔/Ｐ檔<br>
+兩處瘀青．跟揍扁他們/兩處瘀青，跟揍扁他們<br>
+慢漫前進/慢慢前進<br>
+行得通嗎？」「試試看/分段<br>
+劃了個大X/劃了個大Ｘ<br>
+通過X開口/通過Ｘ開口<br>
+U字/Ｕ字<br>
+V形/Ｖ形<br>
+新罕布什爾州/新罕布夏州（原書有誤）<br>
+被逮浦/被逮捕<br>
+要找我去？」沃恩說/分段<br>
+狀麗的一面/壯麗的一面（原書有誤）<br>
+「幾點之後？」...「那要多久之後行動？」/「幾點之後？」...「都行。」...「那要多久之後行動？」（補漏字）<br>
+A字/Ａ字<br>
+倒的L/倒的Ｌ<br>
+L字/Ｌ字<br>
+T區/Ｔ區<br>
+T開頭/Ｔ開頭<br>
+從A開始/從Ａ開始<br>
+從Z開始/從Ｚ開始<br>
+在M或N/在Ｍ或Ｎ<br>
+往V那格/往Ｖ那格<br>
+查完V和U了/查完Ｖ和Ｕ了<br>
+跳過T/跳過Ｔ<br>
+打開S/打開Ｓ<br>
+油屜/抽屜<br>
+K的第一個/Ｋ的第一個<br>
+碳、氫、氦、氧/碳、氫、氮、氧（原書有誤）<br>
+成黑暗。沃恩問：/分段<br>
+福待/福特<br>
+你什麼嗎？」索曼沒回/分段<br>
+跑去那裡。」李奇說/分段<br>
+勢力了嗎？」李奇沒接/分段<br>
+電話給我。」李奇問/分段<br>
+T字/Ｔ字<br>
+扁扁的T/扁扁的Ｔ<br>
+V字/Ｖ字<br>
+V的/Ｖ的<br>
+他說：『愛你的敵人/祂說：『愛你的敵人（原書有誤）<br>
+下戳．整個人/下戳，整個人<br>
+大V型/大Ｖ型<br>
+奈米秒/奈秒（原書有誤）<br>
+<br>
 (Gilbert 2023/03/23)<br>
 科科羅拉多州/科羅拉多州<br>
 打入D 檔/打入D檔<br>
