Initial upload of audiobooks AB001 part 45 and AB003 parts 12-26

--- a/book/audioAB003.html
+++ b/book/audioAB003.html
@@ -18,6 +18,21 @@ PlayMP3('AB003-08', '第二篇《鴻鸞禧（一）》劉小珍錄音 2023/6/27'
 PlayMP3('AB003-09', '第二篇《鴻鸞禧（二）》劉小珍錄音 2023/6/27');
 PlayMP3('AB003-10', '第二篇《鴻鸞禧（三）》劉小珍錄音 2023/6/27');
 PlayMP3('AB003-11', '第二篇《鴻鸞禧（四）》劉小珍錄音 2023/6/27');
+PlayMP3('AB003-12', '第三篇《紅玫瑰與白玫瑰（一）》劉小珍錄音 2023/7/8');
+PlayMP3('AB003-13', '第三篇《紅玫瑰與白玫瑰（二）》劉小珍錄音 2023/7/8');
+PlayMP3('AB003-14', '第三篇《紅玫瑰與白玫瑰（三）》劉小珍錄音 2023/7/8');
+PlayMP3('AB003-15', '第三篇《紅玫瑰與白玫瑰（四）》劉小珍錄音 2023/7/8');
+PlayMP3('AB003-16', '第三篇《紅玫瑰與白玫瑰（五）》劉小珍錄音 2023/7/8');
+PlayMP3('AB003-17', '第三篇《紅玫瑰與白玫瑰（六）》劉小珍錄音 2023/7/8');
+PlayMP3('AB003-18', '第三篇《紅玫瑰與白玫瑰（七）》劉小珍錄音 2023/7/8');
+PlayMP3('AB003-19', '第三篇《紅玫瑰與白玫瑰（八）》劉小珍錄音 2023/7/8');
+PlayMP3('AB003-20', '第三篇《紅玫瑰與白玫瑰（九）》劉小珍錄音 2023/7/8');
+PlayMP3('AB003-21', '第三篇《紅玫瑰與白玫瑰（十）》劉小珍錄音 2023/7/8');
+PlayMP3('AB003-22', '第三篇《紅玫瑰與白玫瑰（十一）》劉小珍錄音 2023/7/8');
+PlayMP3('AB003-23', '第三篇《紅玫瑰與白玫瑰（十二）》劉小珍錄音 2023/7/8');
+PlayMP3('AB003-24', '第三篇《紅玫瑰與白玫瑰（十三）》劉小珍錄音 2023/7/8');
+PlayMP3('AB003-25', '第三篇《紅玫瑰與白玫瑰（十四）》劉小珍錄音 2023/7/8');
+PlayMP3('AB003-26', '第三篇《紅玫瑰與白玫瑰（十五）》劉小珍錄音 2023/7/8');
 
 ?>
 
