Initial upload of revised books 17P2 and 1010490131

--- a/Share/1010490131.html
+++ b/Share/1010490131.html
@@ -12,13 +12,13 @@ $title = '葛蕾西．艾倫殺人事件';
 $book = 'P1010490131';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/3/31');
-ShowEpubDownload('2023/3/31');
-ShowVEpubDownload('2023/3/31');
+ShowUpdbDownload('2023/7/25 2023/3/31');
+ShowEpubDownload('2023/7/25 2023/3/31');
+ShowVEpubDownload('2023/7/25 2023/3/31');
 BookSectionEnd();
 ?>
 <img src="covers/1010490131.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝書蟲整理製作，感謝Kay Chen提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝書蟲整理製作，感謝Kay Chen提供掃瞄檔。感謝sue1289勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -39,6 +39,126 @@ BookSectionEnd();
 台灣省雲林縣人，家庭主婦，兼事翻譯。譯有《空中火力：大衛．羅賓遜》（麥田）、《葛蕾西．艾倫殺人事件》、《格林家殺人事件》（臉譜）、《英雄與梟雄》（商周）、《少做50%，贏得100%成效：雲豹變大象的偽工作與假流程》（三采）等。<br>
 <br>
 <font size=2>
-<strong>勘誤表</strong>：<br>
+<strong>勘誤表：</strong><br>
+(sue1289 2023/7/25)<br>
+…/……<br>
+─/──<br>
+逐令城塔/遂令城塔<br>
+僑傲的作家/驕傲的作家<br>
+SS范達因/Ｓ.Ｓ.范達因<br>
+種子逐隨風/種子遂隨風<br>
+推理史家焦評論/推理史家兼評論<br>
+菲洛。凡斯/菲洛．凡斯<br>
+約愛芬。鐵伊/約瑟芬．鐵伊<br>
+十誠/十誡<br>
+通常探取的/通常採探取的<br>
+證實的排理/證實的推理<br>
+上六之手/上帝之手<br>
+磊落的誠律/磊落的誡律<br>
+沒諗過的人/沒唸過的人<br>
+逐出理相國/逐出理想國<br>
+拍拉圖/柏拉圖<br>
+歡瞞讀者/欺瞞讀者<br>
+一椿/一樁<br>
+論文中所使月艱澀/論文中所使用艱澀<br>
+基騙了忠實/欺騙了忠實<br>
+緒果原來/結果原來<br>
+．．．．．．/……<br>
+事情就來了：既然/事情就來了；既然<br>
+隔閒/隔間<br>
+凡斯間：/凡斯問：<br>
+讓她飽覽/讓牠飽覽<br>
+四處走走。/四處走走。」<br>
+側隱之心/惻隱之心<br>
+是在人憂天/是在杞人憂天<br>
+招政斜視/招致斜視<br>
+離開帝區到凡斯/離開市區到凡斯<br>
+絨絲地毯的如菌草地/絨絲地毯的如茵草地<br>
+被你嚇到：」/被你嚇到；」<br>
+你不告訴我誰讓妳/妳不告訴我誰讓妳(原書有誤)<br>
+你必須准許/妳必須准許<br>
+當你穿上新裝/當妳穿上新裝<br>
+香櫞閒起來/香櫞聞起來<br>
+這論難以想像/這麼難以想像<br>
+也許你的名字/也許妳的名字<br>
+葛蕾西。艾倫/葛蕾西．艾倫<br>
+番牆進去/翻牆進去<br>
+請你讓我─...請你讓我用自己/請你讓我──請你讓我用自己(同一段)<br>
+「喂，聽好了！]希茲號叫/「喂，聽好了！」希茲號叫<br>
+或者是情殺…「/或者是情殺……」<br>
+《一千零一夜的「多姆丹尼爾」/《一千零一夜》的「多姆丹尼爾」<br>
+你一定會了解/妳一定會了解<br>
+沒敢麼嚴重/沒那麼嚴重<br>
+你特別喜愛那些/妳特別喜愛哪些<br>
+瀏回紐約/溜回紐約<br>
+她的餘慮/她的疑慮(原書有誤)<br>
+周圍的人：不一會兒/周圍的人；不一會兒<br>
+雨只裝著/兩只裝著<br>
+還沒完記向/還沒忘記向<br>
+如過沒有了/如果沒有了<br>
+_「那真的是一個/「那真的是一個<br>
+你是我見過最/妳是我見過最<br>
+霸術，。/霸術。<br>
+米換很/米契很<br>
+有腦筋．這麼/有腦筋，這麼<br>
+話來這兒」/話來這兒？」<br>
+狀況？]/狀況？」<br>
+偷瀏進去/偷溜進去<br>
+瀏進辦公/溜進辦公<br>
+他沒回到㕑房/他沒回到廚房<br>
+雲茄盒/雪茄盒<br>
+驗上卻帶著/臉上卻帶著<br>
+要求你一件事──...請你讓我/要求你一件事──請你讓我(同一段)<br>
+興高采列/興高采烈<br>
+人大多了/人太多了<br>
+並不怎熱中/並不怎麼熱中<br>
+釋放請位年輕/釋放這位年輕<br>
+鞋子的尺寸……「/鞋子的尺寸……」<br>
+知道希茲在那裡/知道希茲在哪裡<br>
+號我的把戲/唬我的把戲<br>
+有點申的意味/有點申斥的意味<br>
+氫化氣才會昏迷/氰化氣才會昏迷(原書有誤)<br>
+曼德拉草、虫奎蛇/曼德拉草、蝰蛇(原書有誤)<br>
+並不比她死了個/並不比她清楚她死了個<br>
+你為什麼沒去/妳為什麼沒去<br>
+妳是前天晚上是什麼/妳前天晚上是什麼<br>
+我不知這該往/我不知道該往<br>
+解釋什麼這死者如何/解釋為什麼這死者如何<br>
+「不過，]希茲/「不過，」希茲<br>
+兄住在那兒？/兄住在哪兒？<br>
+淡漠的說/淡漠的說。<br>
+_「他有可能/「他有可能<br>
+邀他入內，並立即向她/邀她入內，並立即向她<br>
+一陳發涼/一陣發涼<br>
+因瑞克。霍夫曼/因瑞克．霍夫<br>
+字跡白沙撒因此/字跡，伯沙撒因此<br>
+大的詛咒．跟著我們/大的詛咒。跟著我們<br>
+抽象概念」/抽象概念，」<br>
+徵底清除/徹底清除<br>
+縺漪/漣漪<br>
+你為什麼不把妳/妳為什麼不把妳<br>
+裏住我/裹住我<br>
+一陳子/一陣子<br>
+橫亙在他跟前最/橫亙在他眼前最<br>
+按撩不住/按捺不住<br>
+就是妳弟弟」/就是妳弟弟。」<br>
+的時候，你可以想像─/的時候，你可以想像──」<br>
+必恭必敬/畢恭畢敬(原書有誤)<br>
+乖乖下。/乖乖坐下。<br>
+對兒瑪小姐/對黛兒瑪小姐<br>
+你是不是遺失了/妳是不是遺失了<br>
+歌文冷漠/歐文冷漠<br>
+叛和死亡」/叛和死亡。」<br>
+幻像所騙/幻象所騙(原書有誤)<br>
+談的是，]米契/談的是，」米契<br>
+面且，就如/而且，就如<br>
+來面對它」/來面對它，」<br>
+然後彼彿不用/然後彷彿不用<br>
+我跟踨你離開市區/我跟蹤你離開市區<br>
+屍體室進鎖著/屍體塞進鎖著<br>
+_但是一個人如何/但是一個人如何<br>
+平常的事：一個比較/平常的事；一個比較<br>
+然足以鐸森先生/然足以讓鐸森先生<br>
+他們就結婚了./他們就結婚了。<br>
 </font>
 </td></tr></table>
