--- a/book/17P2.html
+++ b/book/17P2.html
@@ -12,23 +12,126 @@ $title = '魔鬼的法則';
 $book = 'E17P2';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/10/6 (512K)');
+ShowUpdbDownload('2023/7/25 (512K) 2017/10/6');
 ShowPrcDownload('2017/10/6 (512K)');
 ShowMobiDownload('2017/10/6 (1450K)');
-ShowEpubDownload('2017/10/6 (361K)');
-ShowVEpubDownload('2017/10/6 (361K)');
+ShowEpubDownload('2023/7/25  (361K) 2017/10/6');
+ShowVEpubDownload('2023/7/25  (361K) 2017/10/6');
 BookSectionEnd();
 ?>
 <img src="covers/17P2b.jpg" HSPACE=2 align=center><br>
 <br>
 <img src="covers/17P2.jpg" HSPACE=8 vspace=2 align=right>
 <img src="covers/17P2a.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝Angela Huang按掃描檔整理製作。譯者林立仁。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝Angela Huang按掃描檔整理製作。感謝sue1289勘誤。<br>
 <br>
 <b>（挪威）哈利警探系列之五。</b><br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(sue1289 2023/7/25)<br>
+T恤/Ｔ恤<br>
+魔架上/鷹架上<br>
+幾天後．兩人共/幾天後，兩人共<br>
+紅心J/紅心Ｊ<br>
+梢等一下/稍等一下<br>
+改掉．以免/改掉，以免<br>
+呼出一口菸/呼出一口煙（原書有誤）<br>
+引坑高歌/引吭高歌<br>
+最高順位．滿足她/最高順位，滿足她<br>
+V字型/Ｖ字型<br>
+腫張處/腫脹處<br>
+往桌上一楗/往桌上一搥<br>
+可是哈利．我不相信/可是哈利，我不相信<br>
+辦公室．而且湯姆/辦公室，而且湯姆<br>
+沒有那樓情境/沒有那種情境<br>
+是這樣的嗎，哈利？」...哈利聳了聳肩。/分段<br>
+周日晚餐/週日晚餐<br>
+牆壁賜球/牆壁踢球<br>
+默了一會．好讓這段/默了一會，好讓這段<br>
+狀況正好相反．」/狀況正好相反，」<br>
+同行說的話．我就會/同行說的話，我就會<br>
+開瞠手傑克/開膛手傑克<br>
+T字型/Ｔ字型<br>
+湯姆微笑/湯姆微笑。<br>
+DNA/ＤＮＡ<br>
+LSD/ＬＳＤ<br>
+使喚自行其事/使喚自行其是（原書有誤）<br>
+哭聲之間．又槌了桌子/哭聲之間，又搥了桌子<br>
+有個想法．你可以帶/有個想法，你可以帶<br>
+曾輕能讓他/曾經能讓他<br>
+妯決定忘了/她決定忘了<br>
+瘦長女子．那年春天/瘦長女子，那年春天<br>
+深V領/深Ｖ領<br>
+眼睛謎了起來/眼睛瞇了起來<br>
+字母i上頭的/字母ｉ上頭的<br>
+待種部隊/特種部隊<br>
+低低的汽笛聲，/低低的汽笛聲。<br>
+我可以了解．」/我可以了解，」<br>
+主唱梅森．梅森/主唱雪莉．梅森<br>
+持種部隊/特種部隊<br>
+擺滿免費CD和DVD/擺滿免費ＣＤ和ＤＶＤ<br>
+拿出一個A4信封/拿出一個Ａ４信封<br>
+我的天啊，本入/我的天啊，本人<br>
+賴利波待/賴利波特<br>
+可悲的SOS/可悲的ＳＯＳ<br>
+在踉他揮手/在跟他揮手<br>
+了半秒．然後鬆開/了半秒，然後鬆開<br>
+二十一吋蛋幕/二十一吋螢幕<br>
+萬事OK/萬事ＯＫ<br>
+頭量/頭暈<br>
+向上指、OK/向上指、ＯＫ<br>
+上空的熱霾．莫勒/上空的熱霾，莫勒<br>
+登記地址．這個/登記地址，這個<br>
+要交際的．他只需/要交際的，他只需<br>
+吐了口菸/吐了口煙（原書有誤）<br>
+吸進的菸又/吸進的煙又（原書有誤）<br>
+KGB/ＫＧＢ<br>
+無味無臭．跟氫/無嗦無臭，跟氫<br>
+黑色V字/黑色Ｖ字<br>
+我們正在做─項調查/我們正在做一項調查<br>
+男子的照片．知道他/男子的照片，知道他<br>
+鞫躬/鞠躬<br>
+朝天花板吐菸/朝天花板吐煙（原書有誤）<br>
+站了起來．走到洗臉/站了起來，走到洗臉<br>
+哈和叼起一根/哈利叼起一根（原書有誤）<br>
+吐了口菸/吐了口煙（原書有誤）<br>
+讓煙灰落在/讓菸灰落在（原書有誤）<br>
+勝卷在握/勝券在握<br>
+乾坏/乾杯<br>
+噴出了菸/噴出了煙（原書有誤）<br>
+生在那裡/坐在那裡<br>
+過程非常痛苦。」...史文的眼睛眨了兩下/分段<br>
+連一張A也沒有/連一張Ａ也沒有<br>
+固的根據．那就是/固的根據，那就是<br>
+沒有僥侍/沒有僥倖<br>
+對她們來銳/對她們來說<br>
+距離很短．但他知道/距離很短，但他知道<br>
+短褲和黑色...皮夾克/同一段<br>
+Al07號囚室/Ａ１０７號囚室<br>
+並非巧合．而是他/並非巧合，而是他<br>
+可是我要你檢查/可是我要妳檢查（原書有誤）<br>
+六有上網．所以不知道/六有上網，所以不知道<br>
+都太遲了」/都太遲了。」<br>
+也有貼護創膠布？」...克勞森輕笑幾聲/分段<br>
+是我的拘/是我的狗<br>
+便撥打─一組電話/便撥打一組電話<br>
+發射Ｔ一枚火箭/發射了一枚火箭<br>
+請問一下……」...女子抬起頭來/分段<br>
+「瑪瑪士……」/「湯瑪士……」<br>
+大大的O型菸圈/大大的Ｏ型煙圈<br>
+引了過去．他的/引了過去，他的<br>
+感覺到風．風還沒/感覺到風，風還沒<br>
+騎在我手上/騎在我身上（原書有誤）<br>
+化為了石頭/化為了石頭。<br>
+C開頭的/Ｃ開頭的<br>
+停止紐/停止鈕<br>
+香薛/香菸<br>
+羅凱/蘿凱<br>
+錯誤解讀．」/錯誤解讀。」<br>
+「……被錯誤解讀．」...恰好這時酒館的燈光/分段<br>
+嚐起來有點蛋/嚐起來有點像蛋<br>
+<br>
 (mPDB 2017/10/6)<br>
 修改標點 (幾處)<br>
 班表攔位/班表欄位<br>
